--- a/booking.html
+++ b/booking.html
@@ -35,17 +35,16 @@
                     <a class="mr-5 hover:text-gray-900">Third Link</a>
                     <a class="mr-5 hover:text-gray-900">Fourth Link</a>
                 </nav>
-                <button
-                    class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Button
-                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                        stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                        <path d="M5 12h14M12 5l7 7-7 7"></path>
-                    </svg>
-                </button>
             </div>
         </header>
+        <br>
         <hr>
+        <br>
         <section class="text-gray-600 body-font relative">
+            <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
+                <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">Matki Booking</h1>
+                <p class="lg:w-1/2 w-full leading-relaxed text-gray-500">Aayo Lal Kayo Jhulelal.</p>
+            </div>
             <div class="container px-5 py-24 mx-auto flex sm:flex-nowrap flex-wrap">
                 <div
                     class="lg:w-2/3 md:w-1/2 bg-gray-300 rounded-lg overflow-hidden sm:mr-10 p-10 flex items-end justify-start relative">
@@ -66,9 +65,7 @@
                     </div>
                 </div>
                 <div class="lg:w-1/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
-                    <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Booking</h2>
-                    <p class="leading-relaxed mb-5 text-gray-600">Post-ironic portland shabby chic echo park, banjo
-                        fashion axe</p>
+                    <h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Booking Details</h2>
                     <div class="relative mb-4">
                         <label for="name" class="leading-7 text-sm text-gray-600">NAME</label>
                         <input type="text" id="name" name="name"
@@ -103,13 +100,15 @@
                         </select>
                     </div>
                     <button
-                        class="text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">Button</button>
-                    <p class="text-xs text-gray-500 mt-3">Chicharrones blog helvetica normcore iceland tousled brook
-                        viral artisan.</p>
+                        class="text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">Book</button>
+                    <p class="text-xs text-gray-500 mt-3">We will send you the booking confirmation on above phone
+                        number.</p>
                 </div>
             </div>
         </section>
+        <br>
         <hr>
+        <br>
         <section class="text-gray-600 body-font">
             <div class="container px-5 py-24 mx-auto">
                 <div class="flex flex-wrap -m-4">
@@ -162,8 +161,9 @@
                 </div>
             </div>
         </section>
-
+        <br>
         <hr>
+        <br>
         <footer class="text-gray-600 body-font">
             <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
                 <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
@@ -176,8 +176,7 @@
                 </a>
                 <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">©
                     2020 Chaliya —
-                    <a href="" class="text-gray-600 ml-1" rel="noopener noreferrer"
-                        target="_blank">Jhulelal</a>
+                    <a href="" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">Jhulelal</a>
                 </p>
                 <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
                     <a class="text-gray-500">
